add novos métodos e atributos

--- a/Numpy/numpy.ipynb
+++ b/Numpy/numpy.ipynb
@@ -7,12 +7,19 @@
     "# Numpy\n",
     "O pacote Numpy possui um poderoso objeto array multidimensional, que nos permite realizar um conjunto bastante amplo de operações numéricas, sem a necessidade de utilização de laços for.\n",
     "\n",
-    "1. [Metodos e funções Numpy](#Metodos-e-funções-Numpy)\n",
+    "1. [Atributos e Métodos de arrays Numpy](#Metodos-e-funções-Numpy)\n",
     "    1. [arange( )](#arange)\n",
     "    1. [array( )](#array)\n",
+    "    1. [copy( )](#copy)\n",
     "    1. [.dtype](#dtype)\n",
     "    1. [loadtxt( )](#loadtxt)\n",
+    "    1. [.ndim](#ndim)\n",
+    "    1. [reshape(shape[, order])](#reshape)\n",
+    "    1. [resize(newshape[, refcheck])](#resize)\n",
     "    1. [.shape](#shape)\n",
+    "    1. [.size](#size)\n",
+    "    1. [.T | transpose()](#t)\n",
+    "    1. [tolist()](#tolist)\n",
     "1. [Trabalhando com Numpy](#Trabalhando-com-Numpy)\n",
     "    1. [Desempenho Numpy vs lista Python](#Desempenho-Numpy-vs-lista-Python)\n",
     "    1. [Operações com Numpy](#Operacoes_com_Numpy)\n",
@@ -20,14 +27,15 @@
     "        1. [Operações entre arrays Numpy](#operacoes_entre_arrays_Numpy)\n",
     "        1. [Operações entre arrays Numpy de duas dimensões](#operacoes_entre_arrays_Numpy_duas_dimencoes)\n",
     "    1. [Seleção/Fatiamento com Numpy](#Selecao_com_Numpy)\n",
-    "    1. [Indexação com array booleano no Numpy](#indexacao_bool_com_Numpy)\n"
+    "    1. [Indexação com array booleano no Numpy](#indexacao_bool_com_Numpy)\n",
+    "    1. [Adicionando uma nova linha a um array Numpy](#adicionando_nova_linha_a_array_Numpy)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Metodos e funções Numpy<a class=\"anchor\" id=\"Metodos-e-funções-Numpy\"></a>"
+    "# Atributos e Métodos de arrays Numpy<a class=\"anchor\" id=\"Metodos-e-funções-Numpy\"></a>"
    ]
   },
   {
@@ -72,6 +80,53 @@
     "km = array([10, 20, 30, 40, 50])\n",
     "print(f'{km = }')\n",
     "print(f'{type(km) = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## copy( )<a class=\"anchor\" id=\"copy\"></a>\n",
+    "\n",
+    "Faz uma copia do array sem referencia-lo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "dados_new = dados\n",
+    "# somando 1000 em todos dados da primeira linha\n",
+    "dados_new[0] += 1000\n",
+    "print(f'dados_new = {dados_new}')\n",
+    "\n",
+    "# veja que dados também mudou\n",
+    "print(f'\\ndados = {dados}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tirando a referencia com copy()\n",
+    "\n",
+    "dados_new = dados.copy()\n",
+    "# somando 1000 em todos dados da primeira linha\n",
+    "dados_new[0] += 1000\n",
+    "print(f'dados_new = {dados_new}')\n",
+    "\n",
+    "# veja que dados não mudou\n",
+    "print(f'\\ndados = {dados}')"
    ]
   },
   {
@@ -130,6 +185,126 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## .ndim<a class=\"anchor\" id=\"ndim\"></a>\n",
+    "\n",
+    "Retorna numero de dimenssões do array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "print(f'{dados.ndim = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## reshape(shape[, order])<a class=\"anchor\" id=\"reshape\"></a>\n",
+    "\n",
+    "Retorna o array com os mesmos dados com uma nova forma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import arange\n",
+    "\n",
+    "contador = arange(10)\n",
+    "print(f'{contador = }')\n",
+    "\n",
+    "# Transformando em 5 linhas e 2 colunas com indexação de C (linguagem C)\n",
+    "c = contador.reshape((5, 2), order='C') # order='C' é default, não precisa colocar\n",
+    "print(f'c\\n{c}')\n",
+    "\n",
+    "# Transformando em 5 linhas e 2 colunas com indexação de F (Fortran)\n",
+    "f = contador.reshape((5, 2), order='F')\n",
+    "print(f'f\\n{f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## resize(newshape[, refcheck])<a class=\"anchor\" id=\"resize\"></a>\n",
+    "\n",
+    "Altera forma e tamanho do array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "dados_new = dados\n",
+    "\n",
+    "# Adicionando uma nova linha (irá preenche-la com 0)\n",
+    "dados_new.resize((3, 5))\n",
+    "print(f'dados_new.resize((3, 5))\\n{dados_new}')\n",
+    "\n",
+    "# Gera um erro pois os dados são referenciados (dados_new = dados)\n",
+    "# Ou tiramos a referencia fazendo --> dados_new = dados.copy()\n",
+    "# Ou adicionamos o atributo refcheck=False --> dados_new.resize((3, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ou tiramos a referencia fazendo --> dados_new = dados.copy()\n",
+    "dados_new = dados.copy()\n",
+    "\n",
+    "# Adicionando uma nova linha (irá preenche-la com 0)\n",
+    "dados_new.resize((3, 5))\n",
+    "print(f'dados_new.resize((3, 5))\\n{dados_new}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ou adicionamos o atributo refcheck=False --> dados_new.resize((3, 5))\n",
+    "\n",
+    "dados_new = dados\n",
+    "\n",
+    "# Adicionando uma nova linha (irá preenche-la com 0)\n",
+    "dados_new.resize((3, 5), refcheck=False)\n",
+    "print(f'dados_new.resize((3, 5))\\n{dados_new}')\n",
+    "\n",
+    "# Mas veja que dados também foi modificado!!!\n",
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## .shape<a class=\"anchor\" id=\"shape\"></a>"
    ]
   },
@@ -150,6 +325,82 @@
     "dados = array([km, anos])\n",
     "\n",
     "print(f'{dados.shape = }')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .size<a class=\"anchor\" id=\"size\"></a>\n",
+    "\n",
+    "Retorna numero de elementos do array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "print(f'{dados.size = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## .T | transpose()<a class=\"anchor\" id=\"t\"></a>\n",
+    "\n",
+    "Retorna o transposto, transforma linhas em colunas e vice versa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "print(f'{dados = }')\n",
+    "print(f'{dados.T = }')\n",
+    "print(f'{dados.transpose() = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## tolist()<a class=\"anchor\" id=\"tolist\"></a>\n",
+    "\n",
+    "Retorna o array com uma lista python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "dados = array([km, anos])\n",
+    "\n",
+    "lista = dados.tolist()\n",
+    "print(f'{lista = }')\n",
+    "print(f'{type(lista) = }')"
    ]
   },
   {
@@ -413,6 +664,67 @@
     "\n",
     "# dados[:,] Selecionando as duas linhas. , dados[1] > 2000 Selecionando a colunas que linha 2 maior que 2000\n",
     "print(f'\\ndados[:, dados[1] > 2000]\\n{dados[:, dados[1] > 2000]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Adicionando uma nova linha a um array Numpy<a class=\"anchor\" id=\"adicionando_nova_linha_a_array_Numpy\"></a>\n",
+    "\n",
+    "Temos um array de duas linhas, sendo:\n",
+    "* km dos carros\n",
+    "* ano dos carros\n",
+    "\n",
+    "Queremos colocar uma linha com km_média e transforma-la para o formato de colunas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import array\n",
+    "\n",
+    "km = array([44410., 5712., 37123., 0., 25757.])\n",
+    "anos = array([2003, 1991, 1990, 2019, 2006])\n",
+    "\n",
+    "dados = array([km, anos])\n",
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adicionando linha\n",
+    "dados.resize((3, 5), refcheck=False)\n",
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preenchendo linha de velocidade média\n",
+    "dados[2] = dados[0] / (2021 - dados[1])\n",
+    "dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transformando em colunas\n",
+    "dados.T"
    ]
   }
  ],
