add algumas estatisticas

--- a/Numpy/numpy.ipynb
+++ b/Numpy/numpy.ipynb
@@ -10,6 +10,7 @@
     "1. [Atributos e Métodos de arrays Numpy](#Metodos-e-funções-Numpy)\n",
     "    1. [arange( )](#arange)\n",
     "    1. [array( )](#array)\n",
+    "    1. [column_stack( )](#column_stack)\n",
     "    1. [copy( )](#copy)\n",
     "    1. [.dtype](#dtype)\n",
     "    1. [loadtxt( )](#loadtxt)\n",
@@ -28,6 +29,8 @@
     "        1. [Operações entre arrays Numpy de duas dimensões](#operacoes_entre_arrays_Numpy_duas_dimencoes)\n",
     "    1. [Seleção/Fatiamento com Numpy](#Selecao_com_Numpy)\n",
     "    1. [Indexação com array booleano no Numpy](#indexacao_bool_com_Numpy)\n",
+    "    1. [Estatísticas no Numpy](#estatistica_Numpy)\n",
+    "1. [Soluções com Numpy](#Solucoes-com-Numpy)\n",
     "    1. [Adicionando uma nova linha a um array Numpy](#adicionando_nova_linha_a_array_Numpy)\n"
    ]
   },
@@ -80,6 +83,33 @@
     "km = array([10, 20, 30, 40, 50])\n",
     "print(f'{km = }')\n",
     "print(f'{type(km) = }')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## column_stack( )<a class=\"anchor\" id=\"column_stack\"></a>\n",
+    "Transforma vários arrays em um único array, com cada uma das colunas de cada array como uma coluna."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import loadtxt, column_stack\n",
+    "\n",
+    "# pegando dados\n",
+    "anos = loadtxt(fname='carros-anos.txt', dtype=int)\n",
+    "km = loadtxt(fname='carros-km.txt')\n",
+    "valor = loadtxt(fname='carros-valor.txt')\n",
+    "\n",
+    "print(f'{anos.shape = } - {km.shape = } - {valor.shape = }')\n",
+    "\n",
+    "dataset = column_stack((anos, km, valor))\n",
+    "dataset"
    ]
   },
   {
@@ -664,6 +694,106 @@
     "\n",
     "# dados[:,] Selecionando as duas linhas. , dados[1] > 2000 Selecionando a colunas que linha 2 maior que 2000\n",
     "print(f'\\ndados[:, dados[1] > 2000]\\n{dados[:, dados[1] > 2000]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## Estatísticas no Numpy<a class=\"anchor\" id=\"estatistica_Numpy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from numpy import loadtxt, column_stack, mean, std, sum\n",
+    "\n",
+    "# pegando dados\n",
+    "anos = loadtxt(fname='carros-anos.txt', dtype=int)\n",
+    "km = loadtxt(fname='carros-km.txt')\n",
+    "valor = loadtxt(fname='carros-valor.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Verificando shape\n",
+    "print(f'{anos.shape = }\\n{km.shape = }\\n{valor.shape = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# transformando em um único array\n",
+    "dataset = column_stack((anos, km, valor))\n",
+    "dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# verificando media de todas as colunas\n",
+    "media_todas_colunas = mean(dataset, axis=0) # axis=0 para linhas, axis=1 para colunas\n",
+    "print(f'{media_todas_colunas = }')\n",
+    "\n",
+    "# verificando media individual por coluna\n",
+    "media_km = mean(dataset[:, 1])\n",
+    "print(f'{media_km = }')\n",
+    "media_valor = mean(dataset[:, 2])\n",
+    "print(f'{media_valor = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# verificando desvio padrão de todas as colunas\n",
+    "std_todas_colunas = std(dataset, axis=0) # axis=0 para linhas, axis=1 para colunas\n",
+    "print(f'{std_todas_colunas = }')\n",
+    "\n",
+    "# verificando desvio padrão individual por coluna\n",
+    "std_km = std(dataset[:, 1])\n",
+    "print(f'{std_km = }')\n",
+    "std_valor = std(dataset[:, 2])\n",
+    "print(f'{std_valor = }')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# soma de todas as colunas\n",
+    "soma_todas_colunas = dataset.sum(axis=0)\n",
+    "soma_todas_colunas2 = sum(dataset, axis=0)\n",
+    "print(f'{soma_todas_colunas = }\\n{soma_todas_colunas2 = }')\n",
+    "\n",
+    "soma_km = dataset[:, 1].sum()\n",
+    "soma_km2 = sum(dataset[:, 1])\n",
+    "print(f'{soma_km = }\\n{soma_km2 = }')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Soluções com Numpy<a class=\"anchor\" id=\"Solucoes-com-Numpy\"></a>"
    ]
   },
   {
